--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjz_blog_todos",
+  "name": "nextjs_blog_todos",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "next": "12.1.0",
+    "node-fetch": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.2",
@@ -20,7 +21,6 @@
   },
   "devDependencies": {
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-config-prettier": "^8.5.0"
+    "eslint-config-next": "^12.1.0"
   }
 }
